# weca_regional_indicators

./: .Renviron  .Rprofile  .gitignore  .lintr  .mcp.json  .nojekyll  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  QA_CHECKLIST.md  README.md  _brand.yml  _quarto.yml  custom.scss  index.html  index.qmd  pyproject.toml  search.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-indicator.md
.github/workflows/: publish.yml
chapters/01-economy/: README.md  index.html  index.qmd
chapters/02-transport/: README.md  index.html  index.qmd
chapters/03-place/: README.md  index.html  index.qmd
chapters/04-skills/: ONBOARDING.md  README.md  index.html  index.qmd
chapters/05-environment/: README.md  index.html  index.qmd  regional_indicators_env.R
chapters/06-child-poverty/: README.md  index.html  index.qmd
data/: README.md
data/common_project_data/: Outcomes Framework Indicators v1.1 Feb2026.xlsx  indicators-cleanish.xlsx  indicators-master.url  indicators-master.xlsx
data/examples/: area_employment.csv  bus_ridership.csv  employment_data.xlsx  example_indicator.csv
data/fact/: RI_1D1_broadband_coverage.csv  RI_1E2_population_change.csv  RI_1E3_area_satisfaction.csv  RI_3A2_homes_epc_c_plus.csv  RI_4A1_no_qualifications.csv  RI_4A2_level4_plus.csv  RI_4A3_apprenticeship_starts.csv  RI_4A4_ks4_attainment8.csv  RI_4B1_employment_rate_16_64.csv  RI_4B2_economic_inactivity.csv  RI_4B3_neet_16_17.csv  RI_4B5_below_living_wage.csv  RI_5A1_renewable_capacity_km2.csv  RI_5A2_domestic_renewable.csv  RI_5B1_nondom_epc_a.csv  RI_5E1_heat_stress_deaths.csv  RI_5E2_flood_warning_index.csv  RI_5F1_tree_canopy.csv  RI_5F4_water_catchment_health.csv  RI_5_ghg_emissions.csv  RI_6A1_child_poverty.csv  RI_6A2_good_development_u5.csv  RI_6A3_ks2_expected_standards.csv  RI_6A4_free_school_meals.csv  RI_6B1_childcare_places.csv  RI_6B2_early_years_quality.csv  RI_6D4_child_health_2yr_review.csv  RI_6D5_pupil_semh_needs.csv  RI_ex1_bus_ridership.csv
docs/: WORKFLOW_LEARNING_GUIDE.md  chart-render-gitignore.md  positron-python-kernel-crash-investigation.md  renv-startup-diagnosis.md  session_3_excel.md  vscode-r-config.md
scripts/: test_render.sh
scripts/R/: _common.R  collate_fact.R  db_connect.R  dim_data.R  fact_helpers.R  helpers.R  load_pins.R  month_plots.r  reporting_table.R  summary_tables.R  test_fonts.R  theme_weca.R
scripts/hooks/: install-hooks.sh  pre-commit  scan_secrets.sh
scripts/python/: _common.py  helpers.py  weca_theme.py
scripts/sql/: epc_monthly_cumulative_a_rated_proportion.sql  epc_monthly_cumulative_a_to_c_rated_proportion.sql
site_libs/bootstrap/: bootstrap-c2521cd6864bebbb55f0fc76720b44c6.min.css  (+4 more)
(+56 files in other folders)
