[project]
name = "weca-indicators"
version = "0.1.0"
description = "West of England Regional Priorities - Indicator Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core data analysis
    "pandas>=2.0",
    "polars>=0.20",
    "numpy>=1.24",

    # Visualization
    "matplotlib>=3.7",
    "plotly>=5.14",
    "seaborn>=0.12",

    # Data I/O
    "openpyxl>=3.1",      # Excel files
    "xlrd>=2.0",          # Legacy Excel support
    "requests>=2.31",     # HTTP requests

    # Jupyter integration (for Quarto)
    "ipykernel>=6.25",
    "jupyter>=1.0",
    "nbformat>=5.9",

    # Utilities
    "python-dotenv>=1.0", # Environment variables
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.7",
    "ruff>=0.0.285",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "black>=23.7",
    "ruff>=0.0.285",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
