[project]
name = "weca-indicators"
version = "0.1.0"
description = "West of England Regional Priorities - Indicator Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core data analysis
    "pandas>=2.0",
    "polars>=0.20",
    "numpy>=1.24",
    # Visualisation
    "matplotlib>=3.7",
    "plotly>=5.14",
    "seaborn>=0.12",
    # Data I/O
    "openpyxl>=3.1",   # Excel files
    "xlrd>=2.0",       # Legacy Excel support
    "requests>=2.31",  # HTTP requests
    # Jupyter integration (for Quarto)
    "ipykernel>=6.25",
    "jupyter>=1.0",
    "nbformat>=5.9",
    # Utilities
    "python-dotenv>=1.0",  # Environment variables
    "pyzmq>=27.1.0",       # Communication with Jupyter/Positron
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
